# pdf_editor

./: .gitignore  README.md  index.html  package-lock.json  package.json  一键打包.bat  一键打包.command  启动PDF编辑器.bat  启动PDF编辑器.command
docs/superpowers/plans/: 2026-04-04-foundation-setup.md  2026-04-05-page-operations.md
docs/superpowers/specs/: 2026-04-05-page-operations-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CropOverlay.tsx  ExportDialog.tsx  PDFViewer.tsx  Toolbar.tsx
src/components/Sidebar/: Sidebar.tsx  Thumbnail.tsx
src/config/: pdf-editor.config.ts
src/hooks/: useEditorState.ts  usePDF.ts
src/types/: pdf.ts
src/utils/: auto-crop.ts  image-export.ts  pdf-export.ts
